Scrolling on mobile fixed

--- a/dev/css/main.styl
+++ b/dev/css/main.styl
@@ -176,10 +176,12 @@ section
   color $c-white
   background-color $c-main
   background url(../img/login_bg.jpg) no-repeat center / cover
+  background-attachment fixed
   visibility hidden
   
   .access-code
     @extend $middle
+    top 55%
     text-align center
       
     &.js-incorrect
